PR debug/47620 PR debug/47630 * haifa-sched.c (fix_tick_ready): Skip tick computation for debug insns.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@170324 138bc75d-0d04-0410-961f-82ee72b054a4